--- a/web/index.html
+++ b/web/index.html
@@ -12,10 +12,12 @@
         <h1>Solar Panel Cleaner</h1>
         <h3>Water Level</h3>
         <div class="w-outer">
+            <div class="container-mask">
+            </div>
             <div class="w-inner">
-                <p>0%</p>
             </div>
         </div>
-    </div>
+        <p id="waterValue">0%</p>
+    </div>  
 </body>
 </html>
